@@ -1,3 +1,7 @@
+2009-03-22  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* data/logview-filter.ui: add missing file (#576222).
+
 2009-03-19  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* tests/Makefile.am: build with "-Wl,--as-needed" (#575965).
